# runtime

./: .gitignore  .prettierrc  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json  tsup.config.ts  vite.config.ts
.github/workflows/: ci.yml  publish.yml
crates/wasm-instrument/: Cargo.toml
crates/wasm-instrument/src/: lib.rs
demo/: package-lock.json  package.json
demo/app/: page.tsx
demo/components/: CodeEditor.tsx  Terminal.tsx
demo/hooks/: useCodeExecution.ts
docs/: integration.md  interface.md  work-session-summary.md
src/: console.rs  debug.rs  dwarf.rs  execution.rs  host.rs  instrument.rs  io.rs  types.rs  util.rs  worker.rs
src/dap/: adapter.rs  types.rs
src/debug/: debug.rs  dwarf.rs  dwarf_next.rs  types.rs  variables.rs
src/debug/dwarf/: die.rs  mod.rs  types.rs  unit.rs  variables.rs
src/debug/formatters/: mod.rs  vector.rs
src/debug/formatters/cpp/: map.rs
src/debug/instrument/: encoder.rs  function.rs  mod.rs
src/ts/: debugger.ts  index.ts  worker.ts
src/ts/debugger/: hit.ts  index.ts
src/worker/: debuggee.rs  execution.rs  mod.rs
tests/dap/runs/basic/: dap.json
tools/: breakpoints.rs
tools/dap/: AGENTS.md  lldb.ts  matcher.ts  package-lock.json  package.json  run.ts
tools/dap/backends/: runtime.ts
tools/dap/tests/basic/: dap.json
tools/dap/tests/basic-frames/: dap.json  main.cpp
tools/dap/tests/basic-struct/: dap.json  main.cpp
tools/dap/tests/breakpoints/: dap.jsonc  main.cpp
tools/dev/: run.ts
util/: Cargo.toml  bkpt-map.rs
(+11 files in other folders)
